--- a/web_static/styles/6-filters.css
+++ b/web_static/styles/6-filters.css
@@ -3,20 +3,20 @@
     padding-right: 30px;
     justify-content: space-around;
     align-items: center;
-    background-color: white;
+    background-color: var(--color-white);
     height: 70px;
     width: 100%;
-    border: 1px solid #ddd;
-    border-radius: 4px;
+    border: 1px solid var(--border-color);
+    border-radius: var(--round-corners);
 }
 .filters button{
     font-size: 18px;
-    background-color: #FF5A5F;
-    color: #FFFFFF;
+    background-color: var(--brand-color);
+    color: var(--color-white);
     height: 48px;
     max-width: 20%;
     border: none;
-    border-radius: 4px;
+    border-radius: var(--round-corners);
     flex: 1;
 }
 .filters button:hover{
@@ -41,7 +41,7 @@
     flex: 1;
 }
 .location{
-    border-right: 1px solid #ddd;
+    border-right: 1px solid var(--border-color);
 }
 .location .popover{
     justify-content: space-evenly;
@@ -58,15 +58,15 @@
     flex-direction: column;
     align-items: flex-start;
     /*REQUIRED*/
-    background-color: #fafafa;
-    border: 1px solid #ddd;
-    border-radius: 4px;
+    background-color: var(--popover-bg-color);
+    border: 1px solid var(--border-color);
+    border-radius: var(--round-corners);
     /*------*/
     position:relative;
     top: 16px;
     line-height: 1.5em;
     padding: 10px 0px 30px 1.5rem;
-    z-index: -1;
+    z-index: 1;
 }
 /*REQUIRED*/
 .popover h2{
