--- a/web_static/styles/3-header.css
+++ b/web_static/styles/3-header.css
@@ -1,6 +1,6 @@
 header {
-    background-color: white;
-    height: 70px;
+    background-color: var(--color-white);
+    min-height: 70px;
     width: 100%;
     border-bottom: 1px solid #ccc;
     background-image: url(../images/logo.png);
